--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "autoprefixer": "latest",
