--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@nextui-org/react": "^2.4.5",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.3.2",
     "js-cookie": "^3.0.5",
     "next": "latest",
